[package]
name = "psp-logger"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Logger for the PSP"
repository = "https://github.com/RobbieFernandez/psp-logger/"
exclude = ["rust-toolchain"]

[dependencies]
log = { version = "0.4.21", default-features = false }
psp = { version = "0.3.7"}
spin = "0.9.8"
